Bug Fixes for website on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ a {
 .navbar-container {
   text-align: center;
   background-color: #fcfdfd;
-  box-shadow: 0px -20px 5px 20px #333333;
+  /* box-shadow: 0px -20px 5px 20px #333333; */
   color: #e5efec;
   position: fixed;
   z-index: 9;
@@ -52,14 +52,6 @@ a {
   position: relative;
   font-family: europa, sans-serif;
 }
-
-/* .findr-logo-main {
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-} */
 
 a {
   text-decoration: none;
